force-app/main/default/objects/Master_Data__c/Master_Data__c.object-meta.xml
<CustomObject>
    <!--
    -->
    <label>Master Data</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Master Data</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>