force-app/main/default/objects/Master_Data__c/fields/Account_Pipeline_Status__c.field-meta.xml
<CustomField>
    <fullName>Account_Pipeline_Status__c</fullName>
    <label>Account Pipeline Status</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Account_Type__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>Account_Pipeline_Status</valueSetName>
    </valueSet>
</CustomField>