force-app/main/default/objects/Master_Data__c/fields/Account_Sub_Segment__c.field-meta.xml
<CustomField>
    <fullName>Account_Sub_Segment__c</fullName>
    <description>untuk logic omniscript</description>
    <label>Account Sub Segment Omniscript</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Account_Type_Segment__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>Account_Sub_Segment</valueSetName>
    </valueSet>
</CustomField>