force-app/main/default/objects/Master_Data__c/fields/Account_Type_Segment__c.field-meta.xml
<CustomField>
    <fullName>Account_Type_Segment__c</fullName>
    <description>untuk logic omniscript</description>
    <label>Account Type-Segment Omniscript</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>0_I</fullName>
                <label>General_Individual</label>
            </value>
            <value>
                <fullName>0_E</fullName>
                <label>General_Business</label>
            </value>
            <value>
                <fullName>1_E</fullName>
                <label>Bank_Business</label>
            </value>
            <value>
                <fullName>2_E</fullName>
                <label>Broker_Business</label>
            </value>
            <value>
                <fullName>3_E</fullName>
                <label>Agent_Business</label>
            </value>
            <value>
                <fullName>3_I</fullName>
                <label>Agent_Individual</label>
            </value>
            <value>
                <fullName>4_E</fullName>
                <label>Finance/ Leasing_Business</label>
            </value>
            <value>
                <fullName>5_G</fullName>
                <label>Group_Business Group</label>
            </value>
            <value>
                <fullName>Salvage Buyer_E</fullName>
                <label>Salvage Buyer_Business</label>
            </value>
            <value>
                <fullName>Salvage Buyer_I</fullName>
                <label>Salvage Buyer_Individual</label>
            </value>
            <value>
                <fullName>INSURANCE_E</fullName>
                <label>Insurance_Business</label>
            </value>
            <value>
                <fullName>REINSURANCE_E</fullName>
                <label>Reinsurance_Business</label>
            </value>
            <value>
                <fullName>BROKER_E</fullName>
                <label>Reinsurance Broker_Business</label>
            </value>
            <value>
                <fullName>Independent Surveyor_E</fullName>
                <label>Independent Surveyor_Business</label>
            </value>
            <value>
                <fullName>Claim Surveyor_E</fullName>
                <label>Claim Surveyor_Business</label>
            </value>
            <value>
                <fullName>Loss Adjuster_E</fullName>
                <label>Loss Adjuster_Business</label>
            </value>
            <value>
                <fullName>Claim Investigator_E</fullName>
                <label>Claim Investigator_Business</label>
            </value>
            <value>
                <fullName>Claim Consultant_E</fullName>
                <label>Claim Consultant_Business</label>
            </value>
            <value>
                <fullName>3rd Party Claim Admin_E</fullName>
                <label>3rd Party Claim Admin_Business</label>
            </value>
            <value>
                <fullName>Repairer Shop_E</fullName>
                <label>Repairer Shop_Business</label>
            </value>
            <value>
                <fullName>Part Supplier_E</fullName>
                <label>Part Supplier_Business</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>