force-app/main/default/objects/Master_Data__c/fields/Additional__c.field-meta.xml
<CustomField>
    <fullName>Additional__c</fullName>
    <formula>CASE(RecordType.Name,
&apos;Market&apos;,&apos;[&apos;+ ADDRESS_ID__r.Name+&apos;][&apos;+TEXT(Rate__c)+&apos;]&apos;,
Description__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Additional</label>
    <type>Text</type>
</CustomField>