force-app/main/default/objects/Master_Data__c/fields/Approved_by__c.field-meta.xml
<CustomField>
    <fullName>Approved_by__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Approved by</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Master_Data1</relationshipName>
    <type>Lookup</type>
</CustomField>