force-app/main/default/objects/Master_Data__c/fields/Asset_Category__c.field-meta.xml
<CustomField>
    <fullName>Asset_Category__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Asset Category</label>
    <referenceTo>Master_Data__c</referenceTo>
    <relationshipLabel>Master Data (Asset Category)</relationshipLabel>
    <relationshipName>Master_Data8</relationshipName>
    <type>Lookup</type>
</CustomField>