force-app/main/default/objects/Master_Data__c/fields/Asset_Section__c.field-meta.xml
<CustomField>
    <fullName>Asset_Section__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Asset Section</label>
    <referenceTo>Master_Data__c</referenceTo>
    <relationshipLabel>Master Data (Asset Section)</relationshipLabel>
    <relationshipName>Master_Data6</relationshipName>
    <type>Lookup</type>
</CustomField>