force-app/main/default/objects/Master_Data__c/fields/Asset_Section_ID__c.field-meta.xml
<CustomField>
    <fullName>Asset_Section_ID__c</fullName>
    <externalId>true</externalId>
    <label>Asset Section ID</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>