force-app/main/default/objects/Master_Data__c/fields/AUTHORITY_TYPE__c.field-meta.xml
<CustomField>
    <fullName>AUTHORITY_TYPE__c</fullName>
    <label>AUTHORITY TYPE</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>UW</fullName>
            </value>
            <value>
                <fullName>CL</fullName>
            </value>
            <value>
                <fullName>Policy</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>