force-app/main/default/objects/Master_Data__c/fields/Branch__c.field-meta.xml
<CustomField>
    <fullName>Branch__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Branch</label>
    <referenceTo>Master_Data__c</referenceTo>
    <relationshipLabel>Master Data (Branch)</relationshipLabel>
    <relationshipName>Master_Data5</relationshipName>
    <type>Lookup</type>
</CustomField>