force-app/main/default/objects/Master_Data__c/fields/BRANCH_ID__c.field-meta.xml
<CustomField>
    <fullName>BRANCH_ID__c</fullName>
    <externalId>true</externalId>
    <label>BRANCH ID</label>
    <length>80</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>