force-app/main/default/objects/Master_Data__c/fields/Bruto_Apr__c.field-meta.xml
<CustomField>
    <fullName>Bruto_Apr__c</fullName>
    <label>Bruto Apr</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>