force-app/main/default/objects/Master_Data__c/fields/Bruto_Jan__c.field-meta.xml
<CustomField>
    <fullName>Bruto_Jan__c</fullName>
    <label>Bruto Jan</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>