force-app/main/default/objects/Master_Data__c/fields/Bruto_May__c.field-meta.xml
<CustomField>
    <fullName>Bruto_May__c</fullName>
    <label>Bruto May</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>