force-app/main/default/objects/Master_Data__c/fields/Bruto_Sep__c.field-meta.xml
<CustomField>
    <fullName>Bruto_Sep__c</fullName>
    <label>Bruto Sep</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>