force-app/main/default/objects/Master_Data__c/fields/BSN__c.field-meta.xml
<CustomField>
    <fullName>BSN__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>BSN</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Master Data</relationshipLabel>
    <relationshipName>Master_Data</relationshipName>
    <type>Lookup</type>
</CustomField>