force-app/main/default/objects/Master_Data__c/fields/BSN_ID_Formula__c.field-meta.xml
<CustomField>
    <fullName>BSN_ID_Formula__c</fullName>
    <formula>BSN__r.ProductCode</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>BSN ID Formula</label>
    <type>Text</type>
</CustomField>