force-app/main/default/objects/Master_Data__c/fields/BSN_Name__c.field-meta.xml
<CustomField>
    <fullName>BSN_Name__c</fullName>
    <label>BSN Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>