force-app/main/default/objects/Master_Data__c/fields/BSN_Parent__c.field-meta.xml
<CustomField>
    <fullName>BSN_Parent__c</fullName>
    <label>BSN Parent</label>
    <length>255</length>
    <type>Text</type>
</CustomField>