force-app/main/default/objects/Master_Data__c/fields/Business_Type__c.field-meta.xml
<CustomField>
    <fullName>Business_Type__c</fullName>
    <label>Business Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Co-Insurance</fullName>
            </value>
            <value>
                <fullName>Full Covering</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>