force-app/main/default/objects/Master_Data__c/fields/CBOND_AMOUNT__c.field-meta.xml
<CustomField>
    <fullName>CBOND_AMOUNT__c</fullName>
    <label>CBOND AMOUNT</label>
    <length>100</length>
    <type>Text</type>
</CustomField>