force-app/main/default/objects/Master_Data__c/fields/CBOND_PCT__c.field-meta.xml
<CustomField>
    <fullName>CBOND_PCT__c</fullName>
    <label>CBOND PCT</label>
    <length>100</length>
    <type>Text</type>
</CustomField>