force-app/main/default/objects/Master_Data__c/fields/CITY_ID__c.field-meta.xml
<CustomField>
    <fullName>CITY_ID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CITY ID</label>
    <referenceTo>Location</referenceTo>
    <relationshipLabel>Master Data</relationshipLabel>
    <relationshipName>Master_Data</relationshipName>
    <type>Lookup</type>
</CustomField>