force-app/main/default/objects/Master_Data__c/fields/Class_of_Business__c.field-meta.xml
<CustomField>
    <fullName>Class_of_Business__c</fullName>
    <label>Class of Business</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>COB</valueSetName>
    </valueSet>
</CustomField>