force-app/main/default/objects/Master_Data__c/fields/Clause_Id__c.field-meta.xml
<CustomField>
    <fullName>Clause_Id__c</fullName>
    <externalId>true</externalId>
    <label>Clause Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>