force-app/main/default/objects/Master_Data__c/fields/Clause_Name__c.field-meta.xml
<CustomField>
    <fullName>Clause_Name__c</fullName>
    <label>Clause Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>