force-app/main/default/objects/Master_Data__c/fields/Co_insurance_Sliding_Skill_PCT__c.field-meta.xml
<CustomField>
    <fullName>Co_insurance_Sliding_Skill_PCT__c</fullName>
    <label>Co insurance Sliding Skill PCT</label>
    <length>100</length>
    <type>Text</type>
</CustomField>