force-app/main/default/objects/Master_Data__c/fields/Commodity_Type_Id__c.field-meta.xml
<CustomField>
    <fullName>Commodity_Type_Id__c</fullName>
    <label>Commodity Type Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>