force-app/main/default/objects/Master_Data__c/fields/Construction_Class_Rate_3__c.field-meta.xml
<CustomField>
    <fullName>Construction_Class_Rate_3__c</fullName>
    <label>Construction Class Rate 3</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>