force-app/main/default/objects/Master_Data__c/fields/Counter_Date__c.field-meta.xml
<CustomField>
    <fullName>Counter_Date__c</fullName>
    <label>Counter Date</label>
    <type>DateTime</type>
</CustomField>