force-app/main/default/objects/Master_Data__c/fields/Coverage_301__c.field-meta.xml
<CustomField>
    <fullName>Coverage_301__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Coverage 301</label>
    <referenceTo>Master_Data__c</referenceTo>
    <relationshipLabel>Master Data (Coverage 301)</relationshipLabel>
    <relationshipName>Master_Data9</relationshipName>
    <type>Lookup</type>
</CustomField>