force-app/main/default/objects/Master_Data__c/fields/Coverage__c.field-meta.xml
<CustomField>
    <fullName>Coverage__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Coverage</label>
    <referenceTo>Master_Data__c</referenceTo>
    <relationshipLabel>Master Data (Coverage)</relationshipLabel>
    <relationshipName>Master_Data3</relationshipName>
    <type>Lookup</type>
</CustomField>