force-app/main/default/objects/Master_Data__c/fields/COVERAGE_REF_ID__c.field-meta.xml
<CustomField>
    <fullName>COVERAGE_REF_ID__c</fullName>
    <externalId>true</externalId>
    <label>COVERAGE REF ID</label>
    <length>150</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>