force-app/main/default/objects/Master_Data__c/fields/CREATED_BY2__c.field-meta.xml
<CustomField>
    <fullName>CREATED_BY2__c</fullName>
    <label>CREATED_BY</label>
    <length>255</length>
    <type>Text</type>
</CustomField>