force-app/main/default/objects/Master_Data__c/fields/Created_by__c.field-meta.xml
<CustomField>
    <fullName>Created_by__c</fullName>
    <label>Created by</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>