force-app/main/default/objects/Master_Data__c/fields/DEST_CUR_CODE__c.field-meta.xml
<CustomField>
    <fullName>DEST_CUR_CODE__c</fullName>
    <label>DEST CUR CODE</label>
    <length>80</length>
    <type>Text</type>
</CustomField>