force-app/main/default/objects/Master_Data__c/fields/EFFECTIVE_DATE__c.field-meta.xml
<CustomField>
    <fullName>EFFECTIVE_DATE__c</fullName>
    <label>EFFECTIVE_DATE</label>
    <type>DateTime</type>
</CustomField>