force-app/main/default/objects/Master_Data__c/fields/END_DATE__c.field-meta.xml
<CustomField>
    <fullName>END_DATE__c</fullName>
    <label>END DATE</label>
    <type>Date</type>
</CustomField>