force-app/main/default/objects/Master_Data__c/fields/ENG_DESC__c.field-meta.xml
<CustomField>
    <fullName>ENG_DESC__c</fullName>
    <label>ENG DESC</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>