force-app/main/default/objects/Master_Data__c/fields/ENG_DESC_CL__c.field-meta.xml
<CustomField>
    <fullName>ENG_DESC_CL__c</fullName>
    <label>ENG DESC CL</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>