force-app/main/default/objects/Master_Data__c/fields/ENGINE_CAPACITY__c.field-meta.xml
<CustomField>
    <fullName>ENGINE_CAPACITY__c</fullName>
    <label>ENGINE CAPACITY</label>
    <length>255</length>
    <type>Text</type>
</CustomField>