force-app/main/default/objects/Master_Data__c/fields/EQ_ZONE__c.field-meta.xml
<CustomField>
    <fullName>EQ_ZONE__c</fullName>
    <label>EQ ZONE</label>
    <length>100</length>
    <type>Text</type>
</CustomField>