force-app/main/default/objects/Master_Data__c/fields/ext_id__c.field-meta.xml
<CustomField>
    <fullName>ext_id__c</fullName>
    <externalId>true</externalId>
    <label>ext id</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>