force-app/main/default/objects/Master_Data__c/fields/FACOBLIG_AMOUNT__c.field-meta.xml
<CustomField>
    <fullName>FACOBLIG_AMOUNT__c</fullName>
    <label>FACOBLIG AMOUNT</label>
    <length>100</length>
    <type>Text</type>
</CustomField>