force-app/main/default/objects/Master_Data__c/fields/FASTNAME__c.field-meta.xml
<CustomField>
    <fullName>FASTNAME__c</fullName>
    <label>FASTNAME</label>
    <length>80</length>
    <type>Text</type>
</CustomField>