force-app/main/default/objects/Master_Data__c/fields/FASTOWNER__c.field-meta.xml
<CustomField>
    <fullName>FASTOWNER__c</fullName>
    <label>FASTOWNER</label>
    <length>80</length>
    <type>Text</type>
</CustomField>