force-app/main/default/objects/Master_Data__c/fields/Fax__c.field-meta.xml
<CustomField>
    <fullName>Fax__c</fullName>
    <label>Fax</label>
    <length>80</length>
    <type>Text</type>
</CustomField>