force-app/main/default/objects/Master_Data__c/fields/HORSEPOWER__c.field-meta.xml
<CustomField>
    <fullName>HORSEPOWER__c</fullName>
    <label>HORSEPOWER</label>
    <length>80</length>
    <type>Text</type>
</CustomField>