force-app/main/default/objects/Master_Data__c/fields/IMO_ID__c.field-meta.xml
<CustomField>
    <fullName>IMO_ID__c</fullName>
    <label>IMO_ID</label>
    <length>80</length>
    <type>Text</type>
</CustomField>