force-app/main/default/objects/Master_Data__c/fields/IND_DESC__c.field-meta.xml
<CustomField>
    <fullName>IND_DESC__c</fullName>
    <label>IND DESC</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>