force-app/main/default/objects/Master_Data__c/fields/IND_NAME__c.field-meta.xml
<CustomField>
    <fullName>IND_NAME__c</fullName>
    <label>IND NAME</label>
    <length>255</length>
    <type>Text</type>
</CustomField>