force-app/main/default/objects/Master_Data__c/fields/Is_Active__c.field-meta.xml
<CustomField>
    <fullName>Is_Active__c</fullName>
    <label>Is_Active</label>
    <length>255</length>
    <type>Text</type>
</CustomField>