force-app/main/default/objects/Master_Data__c/fields/IS_ACTOFGOD__c.field-meta.xml
<CustomField>
    <fullName>IS_ACTOFGOD__c</fullName>
    <label>IS ACTOFGOD</label>
    <length>150</length>
    <type>Text</type>
</CustomField>