force-app/main/default/objects/Master_Data__c/fields/IS_CASCO__c.field-meta.xml
<CustomField>
    <fullName>IS_CASCO__c</fullName>
    <label>IS CASCO</label>
    <length>150</length>
    <type>Text</type>
</CustomField>