force-app/main/default/objects/Master_Data__c/fields/IS_DETAIL__c.field-meta.xml
<CustomField>
    <fullName>IS_DETAIL__c</fullName>
    <label>IS DETAIL</label>
    <length>155</length>
    <type>Text</type>
</CustomField>