force-app/main/default/objects/Master_Data__c/fields/IS_EXTENDED_COVER__c.field-meta.xml
<CustomField>
    <fullName>IS_EXTENDED_COVER__c</fullName>
    <label>IS EXTENDED COVER</label>
    <length>150</length>
    <type>Text</type>
</CustomField>