force-app/main/default/objects/Master_Data__c/fields/IS_FEATURE__c.field-meta.xml
<CustomField>
    <fullName>IS_FEATURE__c</fullName>
    <label>IS FEATURE</label>
    <length>150</length>
    <type>Text</type>
</CustomField>