force-app/main/default/objects/Master_Data__c/fields/IS_INTERINSLR__c.field-meta.xml
<CustomField>
    <fullName>IS_INTERINSLR__c</fullName>
    <label>IS INTERINSLR</label>
    <length>150</length>
    <type>Text</type>
</CustomField>