force-app/main/default/objects/Master_Data__c/fields/IS_JAMINAN_D__c.field-meta.xml
<CustomField>
    <fullName>IS_JAMINAN_D__c</fullName>
    <label>IS JAMINAN D</label>
    <length>150</length>
    <type>Text</type>
</CustomField>