force-app/main/default/objects/Master_Data__c/fields/IS_JAMINAN_E__c.field-meta.xml
<CustomField>
    <fullName>IS_JAMINAN_E__c</fullName>
    <label>IS JAMINAN E</label>
    <length>150</length>
    <type>Text</type>
</CustomField>