force-app/main/default/objects/Master_Data__c/fields/IS_LANDTRANSIT__c.field-meta.xml
<CustomField>
    <fullName>IS_LANDTRANSIT__c</fullName>
    <label>IS LANDTRANSIT</label>
    <length>150</length>
    <type>Text</type>
</CustomField>