force-app/main/default/objects/Master_Data__c/fields/Is_MOU__c.field-meta.xml
<CustomField>
    <fullName>Is_MOU__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is MOU</label>
    <type>Checkbox</type>
</CustomField>