force-app/main/default/objects/Master_Data__c/fields/Is_Niaga__c.field-meta.xml
<CustomField>
    <fullName>Is_Niaga__c</fullName>
    <label>Is Niaga</label>
    <length>2</length>
    <type>Text</type>
</CustomField>