force-app/main/default/objects/Master_Data__c/fields/isShow__c.field-meta.xml
<CustomField>
    <fullName>isShow__c</fullName>
    <label>isShow</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>