force-app/main/default/objects/Master_Data__c/fields/JROFGR_AMOUNT__c.field-meta.xml
<CustomField>
    <fullName>JROFGR_AMOUNT__c</fullName>
    <label>JROFGR AMOUNT</label>
    <length>100</length>
    <type>Text</type>
</CustomField>