force-app/main/default/objects/Master_Data__c/fields/JROFGR_PCT__c.field-meta.xml
<CustomField>
    <fullName>JROFGR_PCT__c</fullName>
    <label>JROFGR PCT</label>
    <length>100</length>
    <type>Text</type>
</CustomField>