force-app/main/default/objects/Master_Data__c/fields/JROFUR_AMOUNT__c.field-meta.xml
<CustomField>
    <fullName>JROFUR_AMOUNT__c</fullName>
    <label>JROFUR AMOUNT</label>
    <length>100</length>
    <type>Text</type>
</CustomField>