force-app/main/default/objects/Master_Data__c/fields/JROFUR_PCT__c.field-meta.xml
<CustomField>
    <fullName>JROFUR_PCT__c</fullName>
    <label>JROFUR PCT</label>
    <length>100</length>
    <type>Text</type>
</CustomField>