force-app/main/default/objects/Master_Data__c/fields/KARK_AMOUNT__c.field-meta.xml
<CustomField>
    <fullName>KARK_AMOUNT__c</fullName>
    <label>KARK AMOUNT</label>
    <length>100</length>
    <type>Text</type>
</CustomField>