force-app/main/default/objects/Master_Data__c/fields/KARK_PCT__c.field-meta.xml
<CustomField>
    <fullName>KARK_PCT__c</fullName>
    <label>KARK PCT</label>
    <length>100</length>
    <type>Text</type>
</CustomField>