force-app/main/default/objects/Master_Data__c/fields/Kelas_Konstruksi__c.field-meta.xml
<CustomField>
    <fullName>Kelas_Konstruksi__c</fullName>
    <label>Kelas Konstruksi</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Kelas 1</fullName>
            </value>
            <value>
                <fullName>Kelas 2</fullName>
            </value>
            <value>
                <fullName>Kelas 3</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>