force-app/main/default/objects/Master_Data__c/fields/LAST_UPDATE_BY__c.field-meta.xml
<CustomField>
    <fullName>LAST_UPDATE_BY__c</fullName>
    <label>LAST UPDATE BY</label>
    <length>100</length>
    <type>Text</type>
</CustomField>