force-app/main/default/objects/Master_Data__c/fields/LIMIT_AMOUNT__c.field-meta.xml
<CustomField>
    <fullName>LIMIT_AMOUNT__c</fullName>
    <label>LIMIT AMOUNT</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>