force-app/main/default/objects/Master_Data__c/fields/Lookup_Object__c.field-meta.xml
<CustomField>
    <fullName>Lookup_Object__c</fullName>
    <label>Lookup Object</label>
    <length>255</length>
    <type>Text</type>
</CustomField>