force-app/main/default/objects/Master_Data__c/fields/MAIPARK_AMOUNT__c.field-meta.xml
<CustomField>
    <fullName>MAIPARK_AMOUNT__c</fullName>
    <label>MAIPARK AMOUNT</label>
    <length>100</length>
    <type>Text</type>
</CustomField>