force-app/main/default/objects/Master_Data__c/fields/MAIPARK_PCT__c.field-meta.xml
<CustomField>
    <fullName>MAIPARK_PCT__c</fullName>
    <label>MAIPARK PCT</label>
    <length>100</length>
    <type>Text</type>
</CustomField>