force-app/main/default/objects/Master_Data__c/fields/Neto_Jan__c.field-meta.xml
<CustomField>
    <fullName>Neto_Jan__c</fullName>
    <label>Neto Jan</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>