force-app/main/default/objects/Master_Data__c/fields/Neto_Oct__c.field-meta.xml
<CustomField>
    <fullName>Neto_Oct__c</fullName>
    <label>Neto Oct</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>