force-app/main/default/objects/Master_Data__c/fields/Neto_Sep__c.field-meta.xml
<CustomField>
    <fullName>Neto_Sep__c</fullName>
    <label>Neto Sep</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>