force-app/main/default/objects/Master_Data__c/fields/NON_ACTIVE_STS__c.field-meta.xml
<CustomField>
    <fullName>NON_ACTIVE_STS__c</fullName>
    <label>NON ACTIVE STS</label>
    <length>150</length>
    <type>Text</type>
</CustomField>