force-app/main/default/objects/Master_Data__c/fields/NOTE__c.field-meta.xml
<CustomField>
    <fullName>NOTE__c</fullName>
    <label>NOTE</label>
    <length>255</length>
    <type>Text</type>
</CustomField>