force-app/main/default/objects/Master_Data__c/fields/Occupation_Code__c.field-meta.xml
<CustomField>
    <fullName>Occupation_Code__c</fullName>
    <label>Occupation Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>