force-app/main/default/objects/Master_Data__c/fields/Occupy__c.field-meta.xml
<CustomField>
    <fullName>Occupy__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Occupy</label>
    <referenceTo>Master_Data__c</referenceTo>
    <relationshipLabel>Master Data (Occupy)</relationshipLabel>
    <relationshipName>Master_Data2</relationshipName>
    <type>Lookup</type>
</CustomField>