force-app/main/default/objects/Master_Data__c/fields/Occupy_Id__c.field-meta.xml
<CustomField>
    <fullName>Occupy_Id__c</fullName>
    <externalId>true</externalId>
    <label>Occupy Id</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>