force-app/main/default/objects/Master_Data__c/fields/OFP_IS_DECREASED__c.field-meta.xml
<CustomField>
    <fullName>OFP_IS_DECREASED__c</fullName>
    <label>OFP IS DECREASED</label>
    <length>150</length>
    <type>Text</type>
</CustomField>