force-app/main/default/objects/Master_Data__c/fields/PARENT_BRAND_ID__c.field-meta.xml
<CustomField>
    <fullName>PARENT_BRAND_ID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>PARENT BRAND ID</label>
    <referenceTo>Master_Data__c</referenceTo>
    <relationshipLabel>Master Data (PARENT BRAND ID)</relationshipLabel>
    <relationshipName>Master_Data7</relationshipName>
    <type>Lookup</type>
</CustomField>