force-app/main/default/objects/Master_Data__c/fields/PARENT_COVERAGE_ID__c.field-meta.xml
<CustomField>
    <fullName>PARENT_COVERAGE_ID__c</fullName>
    <label>PARENT COVERAGE ID</label>
    <length>150</length>
    <type>Text</type>
</CustomField>